argo-subscriptions/ecr.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ri-ecr
  namespace: subscriptions-ri
  labels:
    app: ri-ecr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ri-ecr
  template:
    metadata:
      labels:
        app: ri-ecr
    spec:
      containers:
      - name: fhir-candle
        image: argonautcontainerregistry.azurecr.io/subscriptions/fhir-candle:latest
        command: ["dotnet"]
        args: ["fhir-candle.dll", "--reference-implementation", "hl7.fhir.us.ecr", "--load-package", "hl7.fhir.us.ecr", "--r4", "r4", "--smart-optional", "r4", "--protect-source", "true", "-m", "1000", "--max-subscription-minutes", "240", "--load-examples", "true"]
        ports:
        - containerPort: 5826
