argo-subscriptions/fhir-candle.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhir-candle
  namespace: subscriptions-ri
  labels:
    app: fhir-candle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fhir-candle
  template:
    metadata:
      labels:
        app: fhir-candle
    spec:
      containers:
      - name: fhir-candle
        image: argonautcontainerregistry.azurecr.io/subscriptions/fhir-candle:latest
        ports:
        - containerPort: 5826
