argo-subscriptions/hapi-r4.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hapi-r4
  namespace: subscriptions-ri
  labels:
    app: hapi-r4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hapi-r4
  template:
    metadata:
      labels:
        app: hapi-r4
    spec:
      containers:
      - name: hapi-r4
        image: hapiproject/hapi:latest
        ports:
        - containerPort: 8080
