argo-subscriptions/pas.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ri-pas
  namespace: subscriptions-ri
  labels:
    app: ri-pas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ri-pas
  template:
    metadata:
      labels:
        app: ri-pas
    spec:
      containers:
      - name: fhir-candle
        image: argonautcontainerregistry.azurecr.io/subscriptions/fhir-candle:latest
        command: ["dotnet"]
        args: ["fhir-candle.dll", "--reference-implementation", "hl7.fhir.us.davinci-pas", "--ci-package", "HL7/davinci-pas", "--load-package", "hl7.fhir.us.davinci-cdex#2.0.0", "--r4", "provider", "--r4", "payer", "--load-examples", "false", "--protect-source", "true", "-m", "400"]
        ports:
        - containerPort: 5826
