argo-subscriptions/server-proxy.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-proxy
  namespace: subscriptions-ri
  labels:
    app: server-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-proxy
  template:
    metadata:
      labels:
        app: server-proxy
    spec:
      containers:
      - name: server-proxy
        image: argonautcontainerregistry.azurecr.io/subscriptions/server-proxy:latest
        ports:
        - containerPort: 56340
