argo-subscriptions/subscriptions.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ri-subscriptions
  namespace: subscriptions-ri
  labels:
    app: ri-subscriptions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ri-subscriptions
  template:
    metadata:
      labels:
        app: ri-subscriptions
    spec:
      containers:
      - name: fhir-candle
        image: argonautcontainerregistry.azurecr.io/subscriptions/fhir-candle:latest
        command: ["dotnet"]
        args: ["fhir-candle.dll", "--reference-implementation", "subscriptions", "--load-package", "hl7.fhir.uv.subscriptions-backport#1.1.0", "--load-examples", "false", "--protect-source", "true", "-m", "200"]
        ports:
        - containerPort: 5826
