argo-subscriptions/ui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: subscriptions-ri
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - name: ui
        image: argonautcontainerregistry.azurecr.io/subscriptions/ui:latest
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html/env.js
          subPath: env.js
        ports:
        - containerPort: 80
