argo-subscriptions/vitals-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ri-vitals-server
  namespace: subscriptions-ri
  labels:
    app: ri-vitals-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ri-vitals-server
  template:
    metadata:
      labels:
        app: ri-vitals-server
    spec:
      containers:
      - name: fhir-candle
        image: argonautcontainerregistry.azurecr.io/subscriptions/fhir-candle:latest
        command: ["dotnet"]
        args: ["fhir-candle.dll", "--reference-implementation", "smart", "--r4", "open", "--r4", "smart", "--smart-required", "smart", "--protect-source", "true", "-m", "500"]
        ports:
        - containerPort: 5826
