argo-subscriptions/cdex.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: ri-cdex
spec:
  selector:
    app: ri-cdex
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5826
