argo-subscriptions/ecr.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: ri-ecr
spec:
  selector:
    app: ri-ecr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5826
