argo-subscriptions/fhir-candle.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: fhir-candle
spec:
  selector:
    app: fhir-candle
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5826
