argo-subscriptions/hapi-r4.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: hapi-r4
spec:
  selector:
    app: hapi-r4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
