argo-subscriptions/hapi-r5.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: hapi-r5
spec:
  selector:
    app: hapi-r5
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
