argo-subscriptions/pas.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: ri-pas
spec:
  selector:
    app: ri-pas
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5826
