argo-subscriptions/subscriptions.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: ri-subscriptions
spec:
  selector:
    app: ri-subscriptions
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5826
