argo-subscriptions/vitals-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: subscriptions-ri
  name: ri-vitals-server
spec:
  selector:
    app: ri-vitals-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5826
